# garmin-cli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: design.md
src/garmin_cli/: __main__.py  _garmin.py  activities.py  auth.py  cli.py  errors.py  output.py  schema.py  skills_cmd.py  sleep.py  steps.py  validate.py
src/garmin_cli/skills/garmin-activities/: SKILL.md
src/garmin_cli/skills/garmin-shared/: SKILL.md
src/garmin_cli/skills/garmin-sleep/: SKILL.md
src/garmin_cli/skills/garmin-steps/: SKILL.md
src/garmin_cli/skills/recipe-reconstruct-day/: SKILL.md
tests/: test_activities.py  test_cli.py  test_garmin_errors.py  test_garmin_persistence.py  test_output.py  test_schema.py  test_skills.py  test_sleep.py  test_steps.py  test_validate.py
