[project]
name = "garmin-cli"
version = "0.1.0"
description = "Agent-first CLI for Garmin Connect (v0: sleep reading)"
requires-python = ">=3.12"
dependencies = [
    "garminconnect>=0.2.20",
]

[project.scripts]
garmin = "garmin_cli.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/garmin_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
