[project]
name = "garmin-cli"
version = "0.1.0"
description = "Agent-first CLI for Garmin Connect: sleep, steps, and activities."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Gleb Mishchenko", email = "glebmish.dev@gmail.com" },
]
keywords = ["garmin", "garmin-connect", "cli", "agent", "sleep", "steps", "activities", "health"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
dependencies = [
    "garminconnect>=0.2.20",
]

[project.urls]
Homepage = "https://github.com/glebmish/garmin-cli"
Repository = "https://github.com/glebmish/garmin-cli"
Issues = "https://github.com/glebmish/garmin-cli/issues"

[project.scripts]
garmin = "garmin_cli.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/garmin_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
